# file-grouper

./: Cargo.toml  README.adoc  pyproject.toml
src/: file_grouper.py  main.rs
